Dodanie endpointów odpowiedzialnych za edycję testów
